ref: move box-sizing css to avoid layout shift on load

--- a/webzebra/src/critical.css
+++ b/webzebra/src/critical.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #3a7f46;
   font-family: Avenir, Helvetica, Arial, sans-serif;
