--- a/webzebra/src/index.css
+++ b/webzebra/src/index.css
@@ -3,7 +3,6 @@
  Copyright (c) Tailwind Labs, Inc.
 */
 *, :before, :after {
-    box-sizing: border-box;
     border-width: 0;
     border-style: solid;
     border-color: #e5e7eb
